// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Line Colors 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <hr
    className="sc-17eqnv-0 bPrExR"
    color="neutral-00"
    type="solid"
  />
  <hr
    className="sc-17eqnv-0 hzGwUA"
    color="neutral-50"
    type="solid"
  />
  <hr
    className="sc-17eqnv-0 gYvnwE"
    color="neutral-100"
    type="solid"
  />
  <hr
    className="sc-17eqnv-0 hxHHsn"
    color="neutral-200"
    type="solid"
  />
  <hr
    className="sc-17eqnv-0 gscAva"
    color="neutral-300"
    type="solid"
  />
  <hr
    className="sc-17eqnv-0 hNZbAR"
    color="neutral-400"
    type="solid"
  />
  <hr
    className="sc-17eqnv-0 hBnRuI"
    color="neutral-500"
    type="solid"
  />
  <hr
    className="sc-17eqnv-0 iaAlqr"
    color="neutral-600"
    type="solid"
  />
  <hr
    className="sc-17eqnv-0 gUVete"
    color="neutral-700"
    type="solid"
  />
  <hr
    className="sc-17eqnv-0 kWogKF"
    color="neutral-800"
    type="solid"
  />
  <hr
    className="sc-17eqnv-0 kJCWEw"
    color="neutral-900"
    type="solid"
  />
  <hr
    className="sc-17eqnv-0 jKImXX"
    color="primary-main"
    type="solid"
  />
  <hr
    className="sc-17eqnv-0 qPCed"
    color="secondary-main"
    type="solid"
  />
  <hr
    className="sc-17eqnv-0 tOTYC"
    color="alert-error"
    type="solid"
  />
  <hr
    className="sc-17eqnv-0 jaYNNt"
    color="alert-success"
    type="solid"
  />
  <hr
    className="sc-17eqnv-0 WBtYU"
    color="alert-warning"
    type="solid"
  />
</div>
`;

exports[`Storyshots Atoms/Line Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <hr
    className="sc-17eqnv-0 kJCWEw"
    color="neutral-900"
    type="solid"
  />
</div>
`;

exports[`Storyshots Atoms/Line Skeleton 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="sc-kjnynt-0 jfZhXD"
    data-testid="undefined_skeleton"
    id="undefined_skeleton"
    style={
      Object {
        "height": undefined,
        "width": undefined,
      }
    }
  >
    <hr
      className="sc-17eqnv-0 kJCWEw"
      color="neutral-900"
      type="solid"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/Line Types 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <hr
    className="sc-17eqnv-0 kJCWEw"
    color="neutral-900"
    type="solid"
  />
  <hr
    className="sc-17eqnv-0 jJVDgK"
    color="neutral-900"
    type="dashed"
  />
</div>
`;
